--- a/StickyNotes/styles.css
+++ b/StickyNotes/styles.css
@@ -112,3 +112,70 @@ body{
     font-size: 1.45em;
 }
 
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+}
+
+.modal__content {
+    position: absolute;
+    width: 600px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal__title{
+    margin-top: 50px;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+.modal__descr{
+    margin-top: 10px;
+    font-size: 18px;
+}
+
+.modal__instructions{
+    margin-top: 50px;
+    text-align: left;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+
+.modal__instructions span{
+    color: #f7e98d;
+    text-transform: uppercase;
+}
+
+.modal__ending{
+    margin-top: 30px;
+    font-size: 30px;
+}
+
+.modal__close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 60px;
+    line-height: 40px;
+    cursor: pointer;
+}
+
