--- a/StickyNotes/styles.css
+++ b/StickyNotes/styles.css
@@ -43,9 +43,9 @@ body{
     font-size: 2.1875rem;
     position: relative;
     width: var(---size);
-    height: var(---size);
+    min-height: var(---size);
     background: #f7e98d;
-    padding: 20px;
+    padding: 23px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
     word-wrap: break-word;
 }
