feat: added settings button and modal transitions

--- a/StickyNotes/styles.css
+++ b/StickyNotes/styles.css
@@ -14,6 +14,7 @@
 
 body {
     background: #2f363e;
+    overflow: hidden;
 }
 
 .container {
@@ -93,7 +94,7 @@ body {
     position: relative;
     width: var(---size);
     height: var(---size);
-    z-index: 1000;
+    z-index: 5;
     display: none;
 }
 
@@ -124,8 +125,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(10px);
+    z-index: 10;
+    transition: opacity 0.3s ease;
 }
 
 .modal__content {
@@ -138,7 +141,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
     padding: 20px;
     text-align: center;
@@ -180,4 +183,33 @@ body {
     font-size: 60px;
     line-height: 40px;
     cursor: pointer;
+}
+
+.settings{
+    position: absolute;
+    top: -100px;
+    right: -100px;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    font-size: 2.5rem;
+    background: rgba(255, 255, 255, 0.15);
+    transition: 0.5s all ease-out;
+    transform: scale(0.6);
+}
+
+.settings i{
+    position: absolute;
+    top: 115px;
+    right: 115px;
+    color: #fff;
+    transition: 0.5s all ease-out;
+}
+
+.settings:hover{
+    transform: scale(1);
+}
+
+.settings:hover i{
+    transform: rotate(-360deg);
 }
